--- a/developer/myProjects.html
+++ b/developer/myProjects.html
@@ -181,10 +181,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="#" id="home"><i class="fa fa-link"></i> <span>Home</span></a></li>
-        <li><a href="#" id="activity"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
-        <li><a href="#" id="activity"><i class="fa fa-link"></i> <span>My Projects</span></a></li>
-        <li><a href="#" id="activity"><i class="fa fa-link"></i> <span>About Us</span></a></li>
-        <li><a href="#" id="activity"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
+        <li><a href="#" id="myProfile"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
+        <li><a href="#" id="myProjects"><i class="fa fa-link"></i> <span>My Projects</span></a></li>
+        <li><a href="#" id="about"><i class="fa fa-link"></i> <span>About Us</span></a></li>
+        <li><a href="#" id="contact"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
 
       </ul>
       <!-- /.sidebar-menu -->
@@ -286,6 +286,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>Completed</td>
                 <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
               </tr>
+
             </tbody>
           </table>
         </div>
