--- a/mentor/myProjects.html
+++ b/mentor/myProjects.html
@@ -208,10 +208,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </section>
 
     <!-- Main content -->
-    <section class="container main-content">
+    <section class="content">
 
       <div class="row">
-        <div class="col-md-4 offset-md-4">
+        <div class="col-md-4 offset-md-4 col-sm-8 offset-sm-2 col-xs-12">
           <br><br>
         </div>
       </div>
