--- a/mentor/navbar.html
+++ b/mentor/navbar.html
@@ -135,7 +135,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Ehsanul Haque - Web Developer
+                  Ehsanul Haque - Mentor
                   <small>Member since Nov. 2017</small>
                 </p>
               </li>
@@ -182,7 +182,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="#" id="home"><i class="fa fa-link"></i> <span>Home</span></a></li>
         <li><a href="#" id="myProfile"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
-        <li><a href="#" id="myProjects"><i class="fa fa-link"></i> <span>My Projects</span></a></li>
+        <li class="treeview">
+          <a href="#"><i class="fa fa-link"></i> <span>Projects</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="#" id="createProject">Create Project</a></li>
+            <li><a href="#" id="viewProjects">My Projects</a></li>
+          </ul>
+        </li>
         <li><a href="#" id="about"><i class="fa fa-link"></i> <span>About Us</span></a></li>
         <li><a href="#" id="contact"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
 
@@ -195,106 +205,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        My Projects
 
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-        <li class="active">Here</li>
-      </ol>
-    </section>
-
-    <!-- Main content -->
-    <section class="content">
-
-      <div class="row">
-        <div class="col-md-4 offset-md-4">
-          <br><br>
-        </div>
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-12">
-          <table class="table table-striped">
-            <thead class="thead-inverse">
-              <tr>
-                <th>#</th>
-                <th>Title</th>
-                <th>Category</th>
-                <th>Mentor</th>
-                <th>Date Created</th>
-                <th>Status</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td scope="row">1</td>
-                <td>Project One</td>
-                <td>Web Development</td>
-                <td>Dipto Zaman</td>
-                <td>July 11, 2017</td>
-                <td>Running</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">2</td>
-                <td>Project Two</td>
-                <td>Web Development</td>
-                <td>Baky Forhad</td>
-                <td>July 12, 2017</td>
-                <td>Running</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">3</td>
-                <td>Project Three</td>
-                <td>Tech Gadgets</td>
-                <td>Ehsanul Haque</td>
-                <td>July 12, 2017</td>
-                <td>Running</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">4</td>
-                <td>Project Four</td>
-                <td>Health & Wellness</td>
-                <td>Dipto Zaman</td>
-                <td>July 13, 2017</td>
-                <td>Completed</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">5</td>
-                <td>Project Five</td>
-                <td>Web Development</td>
-                <td>Dipto Zaman</td>
-                <td>July 14, 2017</td>
-                <td>Canceled</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">6</td>
-                <td>Project Six</td>
-                <td>Business</td>
-                <td>Dipto Zaman</td>
-                <td>July 14, 2017</td>
-                <td>Completed</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-
-            </tbody>
-          </table>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
 
