--- a/sponsor/dashboard.html
+++ b/sponsor/dashboard.html
@@ -29,8 +29,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <link rel="stylesheet" type="text/css" href="../dist/css/dataTables.bootstrap.min.css">
-
   <!-- Google Font -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
@@ -135,7 +133,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Ehsanul Haque - Web Developer
+                  Ehsanul Haque - Sponsor
                   <small>Member since Nov. 2017</small>
                 </p>
               </li>
@@ -180,11 +178,19 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" id="home"><i class="fa fa-link"></i> <span>Home</span></a></li>
-        <li><a href="#" id="myProfile"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
-        <li><a href="#" id="myProjects"><i class="fa fa-link"></i> <span>My Projects</span></a></li>
-        <li><a href="#" id="about"><i class="fa fa-link"></i> <span>About Us</span></a></li>
-        <li><a href="#" id="contact"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
+        <li class="active"><a href="#" id="overview"><i class="fa fa-link"></i> <span>OverView</span></a></li>
+          <li class="active"><a href="#" id="Team"><i class="fa fa-link"></i> <span>Team</span></a></li>
+        <li class="treeview">
+          <a href="#"><i class="fa fa-link"></i> <span>Notice Board</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="#" class="notice">View Notice</a></li>
+            <li><a href="#" class="postNotice">Post Notice</a></li>
+          </ul>
+        </li>
 
       </ul>
       <!-- /.sidebar-menu -->
@@ -196,103 +202,18 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
-    <section class="content-header">
+    <!-- <section class="content-header">
       <h1>
-        My Projects
+        Page Header
 
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
         <li class="active">Here</li>
       </ol>
-    </section>
+    </section> -->
 
     <!-- Main content -->
-    <section class="content">
-
-      <div class="row">
-        <div class="col-md-4 offset-md-4">
-          <br><br>
-        </div>
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-12">
-          <table class="table table-striped">
-            <thead class="thead-inverse">
-              <tr>
-                <th>#</th>
-                <th>Title</th>
-                <th>Category</th>
-                <th>Mentor</th>
-                <th>Date Created</th>
-                <th>Status</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td scope="row">1</td>
-                <td>Project One</td>
-                <td>Web Development</td>
-                <td>Dipto Zaman</td>
-                <td>July 11, 2017</td>
-                <td>Running</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">2</td>
-                <td>Project Two</td>
-                <td>Web Development</td>
-                <td>Baky Forhad</td>
-                <td>July 12, 2017</td>
-                <td>Running</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">3</td>
-                <td>Project Three</td>
-                <td>Tech Gadgets</td>
-                <td>Ehsanul Haque</td>
-                <td>July 12, 2017</td>
-                <td>Running</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">4</td>
-                <td>Project Four</td>
-                <td>Health & Wellness</td>
-                <td>Dipto Zaman</td>
-                <td>July 13, 2017</td>
-                <td>Completed</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">5</td>
-                <td>Project Five</td>
-                <td>Web Development</td>
-                <td>Dipto Zaman</td>
-                <td>July 14, 2017</td>
-                <td>Canceled</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-              <tr>
-                <td scope="row">6</td>
-                <td>Project Six</td>
-                <td>Business</td>
-                <td>Dipto Zaman</td>
-                <td>July 14, 2017</td>
-                <td>Completed</td>
-                <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
-              </tr>
-
-            </tbody>
-          </table>
-        </div>
-
-      </div>
-    </section>
 
     <!-- /.content -->
   </div>
@@ -331,18 +252,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 <script src="js/page.js"></script>
 
-
-<script type="text/javascript" src="../dist/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="../dist/js/dataTables.bootstrap.min.js"></script>
-
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. -->
-
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('.table').DataTable();
-  });
-</script>
 </body>
 </html>
