--- a/mentor/navbar.html
+++ b/mentor/navbar.html
@@ -205,6 +205,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    
+
+    <!-- /.content -->
+
+
 
   </div>
   <!-- /.content-wrapper -->
