update mentor side bar

--- a/mentor/dashboard.html
+++ b/mentor/dashboard.html
@@ -189,6 +189,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <ul class="treeview-menu">
             <li><a href="#" id="createIssue">Create Issue</a></li>
             <li><a href="#" id="viewIssues">View Issue</a></li>
+            <li><a href="#" id="">Review Issue</a></li>
           </ul>
         </li>
 
