update profile of both mentor and developer

--- a/mentor/createissue.html
+++ b/mentor/createissue.html
@@ -251,6 +251,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <label>Issue Type</label>
                 <select class="form-control">
                   <option>--Select--</option>
+                  <option>Sprint</option>
                   <option>Task</option>
                   <option>Bug</option>
                   <option>Improvement</option>
