--- a/mentor/CreateProject.html
+++ b/mentor/CreateProject.html
@@ -207,7 +207,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
-      <h1>
+      <h1 class="text-center">
         Create Projects
 
       </h1>
@@ -220,7 +220,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Main content -->
     <section class="content">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-8 col-md-offset-2">
           <div class="form-group">
             <label>Project Name</label>
             <input type="text" class="form-control" placeholder="Enter ...">
