--- a/mentor/TeamDetails.html
+++ b/mentor/TeamDetails.html
@@ -95,12 +95,16 @@
   </div>
 
   <div class="container">
-    <form class="" action="index.html" method="post">
+    <form class="" action="" method="post">
       <div class="form-group">
         <label>Add Member</label>
         <input class="form-control" placeholder="user name or Email ..."></input>
+        <select class="form-control">
+          <option>--Select accessablity--</option>
+          <option>Read only</option>
+          <option>can Develop</option>
+        </select>
       </div>
-      <div>
         <button  type="submit" class="btn btn-primary">Add</button>
         <button type="button" class="btn btn-danger" name="button">Cancel</button>
       </div>
