update edit profile of both dev and mentor

--- a/mentor/CreateProject.html
+++ b/mentor/CreateProject.html
@@ -218,72 +218,75 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </section>
 
     <!-- Main content -->
-    <section class="content">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="form-group">
-            <label>Project Name</label>
-            <input type="text" class="form-control" placeholder="Enter ...">
-          </div>
-          <div class="form-group">
-            <label>Project Area</label>
-            <select class="form-control">
-              <option>--Select--</option>
-              <option>Desktop</option>
-              <option>Mobile</option>
-              <option>Web</option>
-            </select>
-          </div>
+    <form class="" action="index.html" method="post">
+      <section class="content">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <div class="form-group">
+              <label>Project Name</label>
+              <input type="text" class="form-control" placeholder="Enter ...">
+            </div>
+            <div class="form-group">
+              <label>Project Area</label>
+              <select class="form-control">
+                <option>--Select--</option>
+                <option>Desktop</option>
+                <option>Mobile</option>
+                <option>Web</option>
+              </select>
+            </div>
 
-          <div class="form-group">
-            <label>Project Type</label>
-            <select class="form-control">
-              <option>--Select--</option>
-              <option>Free</option>
-              <option>Paid</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Repsitory Name</label>
-            <input type="text" class="form-control" placeholder="Enter ..." >
-          </div>
+            <div class="form-group">
+              <label>Project Type</label>
+              <select class="form-control">
+                <option>--Select--</option>
+                <option>Free</option>
+                <option>Paid</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label>Repsitory Name</label>
+              <input type="text" class="form-control" placeholder="Enter ..." >
+            </div>
 
-          <!-- Add member -->
-          <div class="form-group">
-            <label>Add Member</label>
-            <input class="form-control" placeholder="user name or Email ..."></input>
-            <select class="form-control">
-              <option>--Select accessablity--</option>
-              <option>Read only</option>
-              <option>can Develop</option>
-            </select>
-          </div>
-          <div>
-            <button  class="btn btn-primary">Add</button>
-          </div>
+            <!-- Add member -->
+            <div class="form-group">
+              <label>Add Member</label>
+              <input class="form-control" placeholder="user name or Email ..."></input>
+              <select class="form-control">
+                <option>--Select accessablity--</option>
+                <option>Read only</option>
+                <option>can Develop</option>
+              </select>
+            </div>
+            <div>
+              <button  class="btn btn-primary">Add</button>
+            </div>
 
-          <div class="form-group">
-            <label>Select SDLC</label>
-            <select class="form-control">
-              <option>--Select--</option>
-              <option>Scrum</option>
-              <option>DSDM</option>
-              <option>XP</option>
-            </select>
-          </div>
+            <div class="form-group">
+              <label>Select SDLC</label>
+              <select class="form-control">
+                <option>--Select--</option>
+                <option>Scrum</option>
+                <option>DSDM</option>
+                <option>XP</option>
+              </select>
+            </div>
 
-          <div class="form-group">
-            <label>Project Description</label>
-            <textarea class="form-control" rows="5" placeholder="Enter ..." ></textarea>
-          </div>
-          <div>
-            <button  type="submit" class="btn btn-primary">Create</button>
-            <button type="button" class="btn btn-danger" name="button">Cancel</button>
+            <div class="form-group">
+              <label>Project Description</label>
+              <textarea class="form-control" rows="5" placeholder="Enter ..." ></textarea>
+            </div>
+            <div>
+              <button  type="submit" class="btn btn-primary">Create</button>
+              <button type="button" class="btn btn-danger" name="button">Cancel</button>
+            </div>
           </div>
         </div>
-      </div>
 
-    </section>
+      </section>
+
+    </form>
 
     <!-- /.content -->
 
