--- a/developer/myProfile.html
+++ b/developer/myProfile.html
@@ -279,7 +279,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <ul class="nav nav-tabs">
               <li class="active"><a href="#activity" data-toggle="tab">Activity</a></li>
               <li><a href="#timeline" data-toggle="tab">Timeline</a></li>
-              <li><a href="#edit" data-toggle="tab">Edit</a></li>
+              <li><a href="#edit" data-toggle="tab">Edit profile</a></li>
             </ul>
             <div class="tab-content">
               <div class="active tab-pane" id="activity">
@@ -593,15 +593,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </div>
                 </section>
 
-                <!-- /.post -->
-
-                <!-- Post -->
-
-                <!-- /.post -->
-
-                <!-- Post -->
-
-                <!-- /.post -->
               </div>
               <!-- /.tab-pane -->
               <div class="tab-pane" id="timeline">
@@ -701,57 +692,104 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <!-- /.tab-pane -->
 
               <div class="tab-pane" id="edit">
-                <form class="form-horizontal">
-                  <div class="form-group">
-                    <label for="inputName" class="col-sm-2 control-label">Name</label>
+                    <form class="" method="">
+                      <section class="content">
+                        <div class="row">
+                          <div class="col-md-8 col-md-offset-2">
+                            <div class="form-group">
+                              <label>user Name</label>
+                              <input type="text" class="form-control" value="Nadia " disabled>
+                            </div>
+                            <div class="form-group">
+                              <label>First Name</label>
+                              <input type="text" class="form-control" value="Nadia ">
+                            </div>
+                            <div class="form-group">
+                              <label>Last Name</label>
+                              <input type="text" class="form-control" value="Carmichael">
+                            </div>
 
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputName" placeholder="Name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                            <div class="form-group">
+                              <label>Email</label>
+                              <input type="email" class="form-control" value="Carmichael@gmail.com">
+                            </div>
+                            <div class="form-group">
+                              <label>Location</label>
+                              <select class="form-control">
+                                <option>--Select--</option>
+                                <option>Dhaka</option>
+                                <option>rajshahi</option>
+                                <option>khulna</option>
+                              </select>
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputFile">Upload picture</label>
+                              <input type="file" id="">
+                            </div>
 
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputName" class="col-sm-2 control-label">Name</label>
+                            <div class="form-group">
+                              <label>Birth date</label>
+                              <input type="date" class="form-control" value="12/10/94">
+                            </div>
 
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName" placeholder="Name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputExperience" class="col-sm-2 control-label">Experience</label>
+                            <div class="form-group">
+                              <label>Blood group</label>
+                              <select class="form-control">
+                                <option>--Select--</option>
+                                <option>A+</option>
+                                <option>B+</option>
+                                <option>AB+</option>
+                                <option>O+</option>
+                                <option>A-</option>
+                                <option>B-</option>
+                                <option>AB-</option>
+                                <option>O-</option>
+                              </select>
+                            </div>
 
-                    <div class="col-sm-10">
-                      <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputSkills" class="col-sm-2 control-label">Skills</label>
+                            <div class="form-group">
+                              <label>Maritual Status</label>
+                              <select class="form-control">
+                                <option>--Select--</option>
+                                <option>Married </option>
+                                <option>UnMarried</option>
 
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <div class="checkbox">
-                        <label>
-                          <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
-                        </label>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <button type="submit" class="btn btn-danger">Submit</button>
-                    </div>
-                  </div>
-                </form>
+                              </select>
+                            </div>
+
+                            <div class="box box-default collapsed-box box-solid">
+                              <div class="box-header with-border">
+                                <h3 class="box-title">Change Password</h3>
+
+                                <div class="box-tools pull-right">
+                                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
+                                  </button>
+                                </div>
+                                <!-- /.box-tools -->
+                              </div>
+                              <!-- /.box-header -->
+                              <div class="box-body">
+                                <input type="text" class="form-control" name="" value="password">
+                                <input type="text" class="form-control" name="" value="Confirm password">
+                              </div>
+                              <!-- /.box-body -->
+                            </div>
+                                                <!-- Add member -->
+
+
+                            <div class="form-group">
+                              <label>Skills</label>
+                              <input type="text" class="form-control" value="UI Design, Coding, Javascript, PHP, Node.js" >
+                            </div>
+                            <div>
+                              <button  type="submit" class="btn btn-primary">Update</button>
+                              <button type="button" class="btn btn-danger" name="button">Cancel</button>
+                            </div>
+                          </div>
+                        </div>
+
+                      </section>
+                    </form>
               </div>
               <!-- /.tab-pane -->
             </div>
