my profile edited

--- a/developer/assignedIssues.html
+++ b/developer/assignedIssues.html
@@ -226,7 +226,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <th>Title</th>
                 <th>Type</th>
                 <th>Priority</th>
-                <th>Assigned To</th>
+                <th>Created By</th>
                 <th>Due Date</th>
                 <th>Status</th>
                 <th></th>
@@ -242,7 +242,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>July 11, 2017</td>
                 <td><button type="button" class="btn btn-xs btn-danger" name="button">Denied</button></td>
                 <td align="center">
-                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Edit</a>
                   <a href="details.html" class="btn btn-info btn-xs"><i class="fa fa-angle-double-right"></i> Details</a>
                 </td>
               </tr>
@@ -255,7 +254,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>July 12, 2017</td>
                 <td><button type="button" class="btn btn-xs btn-success" name="button">Approved</button></td>
                 <td align="center">
-                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Edit</a>
                   <a href="details.html" class="btn btn-info btn-xs"><i class="fa fa-angle-double-right"></i> Details</a>
                 </td>
               </tr>
@@ -268,7 +266,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>July 12, 2017</td>
                 <td><button type="button" class="btn btn-xs btn-success" name="button">Approved</button></td>
                 <td align="center">
-                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Edit</a>
                   <a href="details.html" class="btn btn-info btn-xs"><i class="fa fa-angle-double-right"></i> Details</a>
                 </td>
               </tr>
@@ -281,7 +278,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>July 13, 2017</td>
                 <td><button type="button" class="btn btn-xs btn-warning" name="button">Pending</button></td>
                 <td align="center">
-                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Edit</a>
                   <a href="details.html" class="btn btn-info btn-xs"><i class="fa fa-angle-double-right"></i> Details</a>
                 </td>
               </tr>
@@ -294,7 +290,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>July 14, 2017</td>
                 <td><button type="button" class="btn btn-xs btn-info" name="button">In Progress</button></td>
                 <td align="center">
-                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Edit</a>
+                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Submit</a>
                   <a href="details.html" class="btn btn-info btn-xs"><i class="fa fa-angle-double-right"></i> Details</a>
                 </td>
               </tr>
@@ -307,7 +303,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <td>July 14, 2017</td>
                 <td><button type="button" class="btn btn-xs bg-purple" name="button">To Do</button></td>
                 <td align="center">
-                  <a href="details.html" class="btn btn-primary btn-xs"><i class="fa fa-angle-double-right"></i> Edit</a>
                   <a href="details.html" class="btn btn-info btn-xs"><i class="fa fa-angle-double-right"></i> Details</a>
                 </td>
               </tr>
