--- a/developer/navbar.html
+++ b/developer/navbar.html
@@ -180,11 +180,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" id="home"><i class="fa fa-link"></i> <span>Home</span></a></li>
-        <li><a href="#" id="myProfile"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
-        <li><a href="#" id="myProjects"><i class="fa fa-link"></i> <span>My Projects</span></a></li>
-        <li><a href="#" id="about"><i class="fa fa-link"></i> <span>About Us</span></a></li>
-        <li><a href="#" id="contact"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
+        <li class="active" id="home"><a href="#"><i class="fa fa-link"></i> <span>Home</span></a></li>
+        <li  id="myProfile"><a href="#"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
+        <li id="myProjects"><a href="#"><i class="fa fa-link"></i> <span>My Projects</span></a></li>
+        <li id="about"><a href="#"><i class="fa fa-link"></i> <span>About Us</span></a></li>
+        <li id="contact"><a href="#"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
 
       </ul>
       <!-- /.sidebar-menu -->
@@ -195,7 +195,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    
+
   </div>
   <!-- /.content-wrapper -->
 
@@ -243,6 +243,52 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script type="text/javascript">
   $(document).ready(function() {
     $('.table').DataTable();
+    $('.content-wrapper').load("home.html");
+
+    $('#home').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').addClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("home.html");
+    });
+
+    $('#myProjects').on('click', () => {
+      $('#myProjects').addClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("myProjects.html");
+    });
+
+    $('#myProfile').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').addClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("myProfile.html");
+    });
+
+    $('#contact').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').addClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("../shared/contact.html");
+    });
+
+    $('#about').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').addClass("active");
+      $('.content-wrapper').load("../shared/about.html");
+    });
   });
 </script>
 </body>
