--- a/mentor/navbar.html
+++ b/mentor/navbar.html
@@ -206,7 +206,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
-    
+
 
     <!-- /.content -->
 
@@ -259,6 +259,52 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script type="text/javascript">
   $(document).ready(function() {
     $('.table').DataTable();
+    $('.content-wrapper').load("home.html");
+
+    $('#home').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').addClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("home.html");
+    });
+
+    $('#myProjects').on('click', () => {
+      $('#myProjects').addClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("myProjects.html");
+    });
+
+    $('#myProfile').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').addClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("myProfile.html");
+    });
+
+    $('#contact').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').addClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("../shared/contact.html");
+    });
+
+    $('#about').on('click', () => {
+      $('#myProjects').removeClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').addClass("active");
+      $('.content-wrapper').load("../shared/about.html");
+    });
   });
 </script>
 </body>
