completed my profile developer

--- a/developer/myProfile.html
+++ b/developer/myProfile.html
@@ -74,65 +74,41 @@
 
             <!-- /.box-body -->
           </div>
-          <div class="box box-default collapsed-box box-solid">
-            <div class="box-header with-border">
-              <h3 class="box-title">More information</h3>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+              <h4 class="panel-title">
 
-              <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
-                </button>
-              </div>
+                      <a role="button" class="btn-block" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  More Information
+                </a>
+              </h4>
               <!-- /.box-tools -->
             </div>
             <!-- /.box-header -->
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
 
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>First name</strong>  <span class="pull-right badge bg-blue">Ehsanul</span></a></li>
-              </ul>
-              <hr>
-            </div>
+                <div class="panel-body">
+                  <ul class="nav nav-stacked">
+                    <li><strong>Name</strong>  <span class="pull-right badge bg-blue">Ehsanul Haque</span></a></li>
+                    <hr>
+                    <li><strong>Email </strong>  <span class="pull-right badge bg-blue">Ehsanul@gmail.com</span></a></li>
+                    <hr>
+                    <li><strong>Location</strong>  <span class="pull-right badge bg-blue">Dhaka</span></a></li>
+                    <hr>
+                    <li><strong>Date og birth</strong>  <span class="pull-right badge bg-blue">10/12/95</span></a></li>
+                    <hr>
+                    <li><strong>Blood group</strong>  <span class="pull-right badge bg-blue">A+</span></a></li>
+                    <hr>
+                    <li><strong>Maritual Status</strong>  <span class="pull-right badge bg-blue">UnMarried</span></a></li>
+                  </ul>
+                </div>
 
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>Last name</strong>  <span class="pull-right badge bg-blue">Haque</span></a></li>
-              </ul>
-              <hr>
-            </div>
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>Email </strong>  <span class="pull-right badge bg-blue">Ehsanul@gmail.com</span></a></li>
-              </ul>
-              <hr>
-            </div>
 
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>Location</strong>  <span class="pull-right badge bg-blue">Dhaka</span></a></li>
-              </ul>
-              <hr>
+
+
+
             </div>
 
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>Date og birth</strong>  <span class="pull-right badge bg-blue">10/12/95</span></a></li>
-              </ul>
-              <hr>
-            </div>
-
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>Blood group</strong>  <span class="pull-right badge bg-blue">A+</span></a></li>
-              </ul>
-              <hr>
-            </div>
-
-            <div class="box-body">
-              <ul class="nav nav-stacked">
-                <li><strong>Maritual Status</strong>  <span class="pull-right badge bg-blue">UnMarried</span></a></li>
-              </ul>
-              <hr>
-            </div>
             <!-- /.box-body -->
           </div>
           <!-- /.box -->
@@ -622,47 +598,77 @@
                               </select>
                             </div>
 
-                            <div class="box box-default collapsed-box box-solid">
-                              <div class="box-header with-border">
-                                <h3 class="box-title">Change Password</h3>
+                            <div class="panel panel-default">
+                              <div class="panel-heading" role="tab" id="headingTwo">
+                                <h4 class="panel-title">
 
-                                <div class="box-tools pull-right">
-                                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
-                                  </button>
-                                </div>
+                                        <a role="button" class="btn-block" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                    Change Password
+                                  </a>
+                                </h4>
                                 <!-- /.box-tools -->
                               </div>
                               <!-- /.box-header -->
-                              <div class="box-body">
-                                <label>Password</label>
-                                <input type="text" class="form-control" name="" >
-                                <label>Confirm Password</label>
-                                <input type="text" class="form-control" name="" >
+                              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+
+                                  <div class="panel-body">
+                                    <form class="">
+                                      <div class="form-group">
+                                        <label for="previousPassword">Previous Password</label>
+                                        <input type="pasword" id="previousPassword" class="form-control" name="" >
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="password">Password</label>
+                                        <input type="password" id="password" class="form-control" name="" >
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="confirmPassword">Confirm Password</label>
+                                        <input type="password" id="confirmPassword" class="form-control" name="" >
+                                      </div>
+                                      <button type="submit" class="btn btn-primary">Change Password</button>
+                                    </form>
+                                  </div>
                               </div>
+
                               <!-- /.box-body -->
                             </div>
 
-                            <div class="box box-default collapsed-box box-solid">
-                              <div class="box-header with-border">
-                                <h3 class="box-title">Educational Info</h3>
+                            <div class="panel panel-default">
+                              <div class="panel-heading" role="tab" id="headingThree">
+                                <h4 class="panel-title">
 
-                                <div class="box-tools pull-right">
-                                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
-                                  </button>
-                                </div>
+                                        <a role="button" class="btn-block" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                                    Education Info (Your Highest Degree Only)
+                                  </a>
+                                </h4>
                                 <!-- /.box-tools -->
                               </div>
                               <!-- /.box-header -->
-                              <div class="box-body">
-                                <label>Institute</label>
-                                <input type="text" class="form-control" name="" value="University of Tennessee at Knoxville">
-                                <label>Program</label>
-                                <input type="text" class="form-control" name="" value="B.S.C">
-                                <label>Department</label>
-                                <input type="text" class="form-control "name="" value="Computer science">
+                              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+
+                                  <div class="panel-body">
+                                    <form class="">
+                                      <div class="form-group">
+                                        <label for="institute">Institute</label>
+                                        <input type="text" id="institute" class="form-control" name="" value="University of Tennessee at Knoxville">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="program">Program</label>
+                                        <input type="text" id="program" class="form-control" name="" value="B.S.C">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="department">Department</label>
+                                        <input type="text" id="department" class="form-control "name="" value="Computer science">
+                                      </div>
+                                      <button type="submit" class="btn btn-primary">Update Education Info</button>
+                                    </form>
+                                  </div>
                               </div>
+
                               <!-- /.box-body -->
                             </div>
+
+
                                                 <!-- Add member -->
 
 
