--- a/developer/home.html
+++ b/developer/home.html
@@ -12,7 +12,44 @@
 </section>
 
 <!-- Main content -->
-<section class="container main-content">
+<section class="content">
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+
+
+
+
+
+
+
+            <div class="box box-primary box-solid collapsed-box">
+              <div class="box-header with-border">
+                <h3 class="box-title">More inftormations.....</h3>
+
+                <div class="box-tools pull-right">
+                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
+                  </button>
+                </div>
+                <!-- /.box-tools -->
+              </div>
+              <!-- /.box-header -->
+              <div class="box-body">
+                The body of the box
+              </div>
+              <!-- /.box-body -->
+            </div>
+
+
+
+
+        </div>
+
+    </div>
+
+
+
+
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2" style="background:#fff; box-shadow:0 2px 15px rgba(84,96,103,.25);">
             <!--POST 1-->
