issuedetails show, review done issue

--- a/developer/navbar.html
+++ b/developer/navbar.html
@@ -244,7 +244,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     $('.table').DataTable();
 
     $('.content-wrapper').load("home.html");
-    
+
 
     $('#home').on('click', () => {
       $('#myProjects').removeClass("active");
@@ -279,7 +279,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       $('#myProfile').removeClass("active");
       $('#contact').addClass("active");
       $('#about').removeClass("active");
-      $('.content-wrapper').load("../shared/contact.html");
+      $('.content-wrapper').load("../mentor/reviewDoneIssue.html");
     });
 
     $('#about').on('click', () => {
@@ -288,7 +288,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       $('#myProfile').removeClass("active");
       $('#contact').removeClass("active");
       $('#about').addClass("active");
-      $('.content-wrapper').load("../shared/about.html");
+      $('.content-wrapper').load("issueDetails.html");
     });
   });
 </script>
