--- a/shared/login.html
+++ b/shared/login.html
@@ -36,9 +36,9 @@
   <div class="login-box-body">
     <p class="login-box-msg">Sign in to start your session</p>
 
-    <form action="../index.html" method="post">
+    <form>
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Email">
+        <input type="text" class="form-control" id="username" placeholder="username">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
@@ -55,7 +55,7 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          <button type="button" id="login" class="btn btn-primary btn-block btn-flat">Sign In</button>
         </div>
         <!-- /.col -->
       </div>
@@ -90,6 +90,20 @@
       checkboxClass: 'icheckbox_square-blue',
       radioClass: 'iradio_square-blue',
       increaseArea: '20%' // optional
+    });
+  });
+  $(document).ready(function() {
+    $('#login').on('click', () => {
+      let name = $('#username').val();
+      if (name==="developer") {
+        document.location.href = "../developer/navbar.html";
+      }
+      else if (name==="mentor") {
+
+      }
+      else {
+
+      }
     });
   });
 </script>
